# seajob-server

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy_seajob_server.yml
api/: Cargo.toml
api/src/: auth.rs  contacted_job.rs  index.rs  job_contacted.rs  job_define.rs  job_task.rs  lib.rs  router.rs
common/: Cargo.toml
common/benches/: idgen_benchmark.rs
common/src/: auth.rs  db.rs  err.rs  lib.rs  metrics.rs  redis_client.rs  req.rs  response.rs
common/src/id_gen/: default_id_generator.rs  id_generator.rs  id_generator_options.rs  mod.rs  rand_numeric.rs
dto/: Cargo.toml
dto/src/: lib.rs  user_context.rs
dto/src/req/: activate.rs  auth.rs  job_contacted.rs  job_define.rs  job_define_create.rs  job_task.rs  mod.rs  trail.rs
dto/src/res/: auth.rs  job_define.rs  mod.rs
entity/: Cargo.toml
entity/sql/: accounts.sql  activation_code.sql  quota.sql  role.sql  user_activation_log.sql  user_define.sql  user_membership.sql  user_role.sql
entity/src/: account.rs  contacted_job.rs  job_contacted.rs  job_define.rs  job_param.rs  job_prefer.rs  job_stats.rs  job_task.rs  lib.rs  prelude.rs  resume.rs  user_define.rs
entity/src/member/: activation_code.rs  mod.rs  quota.rs  role.rs  user_activation_log.rs  user_membership.rs  user_role.rs
entry/auth/: Cargo.toml
entry/auth/src/: activate.rs  auth.rs  index.rs  main.rs  member.rs  router.rs  trial.rs  usage.rs
entry/mind/: Cargo.toml
entry/mind/src/: index.rs  main.rs  router.rs
entry/seajob/: Cargo.toml
entry/seajob/src/: job_define.rs  main.rs  router.rs
middleware/: Cargo.toml
middleware/src/: lib.rs  set_user_id.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240726_151640_job_contacted.rs  m20240726_234256_add_job_define.rs  m20240726_234309_add_job_param.rs  m20240726_234354_add_job_prefer.rs  m20240726_234403_add_job_task.rs  main.rs
service/: Cargo.toml
service/src/: activate.rs  auth.rs  contacted_job_service.rs  crud_service.rs  entry.rs  err.rs  job_contacted.rs  job_define.rs  job_task.rs  lib.rs  member.rs  role.rs  trial.rs  user.rs  user_role.rs
src/: main.rs
