[package]
name = "seajob-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "api", "service", "entity", "migration", "common"]

[dependencies]
seajob-api = { path = "api" }
seajob-service = { path = "service" }
seajob-common = { path = "common" }

[profile.release]
codegen-units = 1
strip = true
lto = true
opt-level = "z"
