[package]
name = "seajob-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "seajob_api"
path = "src/lib.rs"

[dependencies]
seajob-service = { path = "../service" }
seajob-common = { path = "../common" }
seajob-dto = { path = "../dto" }
actix-web = "4.8.0"
listenfd = "1.0.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = "1.39.1"
env_logger = "0.11.5"
validator = { version = "0.18", features = ["derive"] }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
log = "0.4.22"
actix-cors = "0.7.0"
jsonwebtoken = "9.3.0"
async-trait = "0.1.81"

