[package]
name = "seajob-common"
version = "0.1.0"
edition = "2021"

[lib]
name = "seajob_common"
path = "src/lib.rs"

[dependencies]
once_cell = "1.19.0"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
tokio = { version = "1.39.1", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "idgen_benchmark"
harness = false
