[package]
name = "seajob-entity"
version = "0.1.0"
edition = "2021"

[lib]
name = "seajob_entity"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.38"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
strum = "0.26.3"
strum_macros = "0.26.4"
ulid = "1.1.3"
serde = { version = "1.0.204", features = ["derive"] }
