[package]
name = "seajob-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "seajob_service"
path = "src/lib.rs"

[dependencies]
seajob-entity = { path = "../entity" }
seajob-common = { path = "../common" }
seajob-dto = { path = "../dto" }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
tokio = "1.39.1"
async-trait = "0.1.81"
serde_json = "1.0.120"
log = "0.4.22"
thiserror = "1.0.63"
anyhow = "1.0.86"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.204", features = ["derive"] }
once_cell = "1.19.0"
redis = { version = "0.26.1", features = ["tokio-comp"] }
bcrypt = "0.15.1"
rand = "0.8.5"

